silta-cluster/docs/kyverno-add-psa-labels-existing-ns.yaml
# Runs once, adds PSA labels to existing namespaces
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-psa-labels-existing-ns
  annotations:
    policies.kyverno.io/title: Add PSA Label to Existing Namespaces
    policies.kyverno.io/category: Pod Security Admission
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Namespace
    kyverno.io/kyverno-version: 1.8.0
    policies.kyverno.io/minversion: 1.7.0
    kyverno.io/kubernetes-version: "1.24"
    policies.kyverno.io/description: >-
      Adds PSA labels to existing namespaces.
spec:
  mutateExistingOnPolicyUpdate: true
  background: false
  rules:
  - name: label-privileged-namespaces
    match:
      any:
      - resources:
          kinds:
          - Namespace
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - silta-cluster
    mutate:
      targets:
        - apiVersion: v1
          kind: Namespace
      patchStrategicMerge:
        metadata:
          labels:
            +(pod-security.kubernetes.io/enforce): baseline
            +(pod-security.kubernetes.io/enforce-version): latest
            +(pod-security.kubernetes.io/warn): baseline
            +(pod-security.kubernetes.io/warn-version): latest
